--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -59,3 +59,18 @@
   outline: none !important;
   box-shadow: none !important;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-accent);
+  border-radius: 9999px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent-foreground);
+}
